--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -15,10 +15,11 @@
       width: 85%;
       opacity: 0.8;
       border-radius: 8px;
+      transition: 1s ease;
     }
 
     & button {
-      transition: .5s ease;
+      transition: 1s ease;
       opacity: 0;
       position: absolute;
       top: 50%;
