--- a/src/styles/schedule/schedule.scss
+++ b/src/styles/schedule/schedule.scss
@@ -5,6 +5,26 @@
   display: flex;
   flex-direction: column;
 
+  &__bus{
+    margin-top: 110px;
+    margin-left: 20%;
+    & ol {
+      background: #212529;
+      width: 20%;
+      margin-bottom: 50px;
+      & li{
+        margin-left: 25px;
+        & a{
+          color: grey;
+        }
+      }
+    }
+  }
+
+  &__stop{
+    margin-top: 110px;
+  }
+
   &__nav{
     margin-top: 110px;
     align-self: center;
